--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "main": "index.js",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-express-server": "^0.5.1"
+    "grunt-nodemon": "^0.4.0"
   },
   "dependencies": {
     "express": "^4.12.4",
